<resources>
    <string name="app_name">Package extention</string>

    <string name="data_text">DATA : 01285209848</string>
    <string name="personal_text">Personal : 01281112585</string>
    <string name="test_text">Test NO. : 01206607035 </string>
    <string name="voda_text">Vodafone : 01093931801 </string>
    <string name="etisalat_text">Etisalat : 01129939413</string>
    <string name="gigas">NO. of GBs :</string>
    <string name="request">REQUEST</string>
    <string name="phone_number">Phone Number :</string>
    <string name="data_extention">Data Extention</string>

</resources>
