<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_extention"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="#1c6f97"
android:layout_marginBottom="20dp"
        />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:textColor="#FF1C6F97"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="18sp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_text"
            android:layout_marginBottom="5dp"/>

        <CheckBox
            android:id="@+id/personal_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal_text"
            android:layout_marginBottom="5dp"/>

        <CheckBox
            android:id="@+id/test_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_text"
            android:layout_marginBottom="5dp"/>

        <CheckBox
            android:id="@+id/etisalat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/etisalat_text"
            android:layout_marginBottom="5dp"/>
        <CheckBox
            android:id="@+id/vodafone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voda_text"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>
</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">
        <TextView
            android:textColor="#FF1C6F97"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gigas"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textSize="18sp"
            />

        <EditText
            android:id="@+id/edit"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request"
        android:onClick="request"
        android:layout_gravity="center"/>
</LinearLayout>